--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Main.js"></script>
+    <!-- <script src="Main.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/DevaPandiyan/MiraxAI@main/Miraxai.%400.1.min.js"></script>
 
 <body>
     <script>
